started portfolio, archives and single

--- a/wp-content/themes/anglewood-child/css/child-theme.css
+++ b/wp-content/themes/anglewood-child/css/child-theme.css
@@ -15058,6 +15058,52 @@ h1 {
   padding-bottom: 75px;
 }
 
+.hero-padding {
+  padding: 225px 0 150px;
+  background-image: url(../img/woodbg.jpg);
+  background-size: cover;
+}
+.hero-padding h1 {
+  color: #f7f2ee;
+}
+
+.default-link {
+  font-size: 15px;
+  font-family: "Gilmer Bold", sans-serif;
+  text-transform: uppercase;
+}
+.default-link span {
+  transition: 0.2s all;
+  position: relative;
+  top: -2px;
+  left: 2px;
+}
+.default-link:hover {
+  transition: 0.2s all;
+  text-decoration: none;
+  color: #743dbc !important;
+}
+.default-link:hover span {
+  left: 8px;
+}
+.default-link.light {
+  color: #f7f2ee;
+}
+.default-link.light:hover {
+  color: #f7f2ee !important;
+}
+
+.small-title {
+  font-size: 18px;
+}
+
+.flex-height {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+}
+
 .navbar-dark .navbar-brand {
   width: 210px;
 }
@@ -15077,6 +15123,19 @@ h1 {
   text-transform: uppercase;
   font-family: "Gilmer Bold", sans-serif;
   font-size: 14px;
+  padding: 0;
+  margin: 0.5rem;
+  border-bottom: 3px solid #000;
+}
+
+.navbar-dark .navbar-nav .active > .nav-link {
+  color: #fff;
+  border-bottom: 3px solid #743dbc;
+}
+
+.navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover {
+  color: #f7f2ee;
+  border-bottom: 3px solid #743dbc;
 }
 
 .hero {
@@ -15099,6 +15158,9 @@ h1 {
 
 .intro-p-wrap {
   padding-left: 80px;
+}
+.intro-p-wrap a {
+  color: #000;
 }
 
 .vertical-line {
@@ -15126,10 +15188,43 @@ h1 {
 .slider-section h2 {
   color: #f7f2ee;
 }
+.slider-section .recent-proj-view-all {
+  margin-bottom: 35px;
+}
 
 .recent-projects-slider {
   border-left: 1px solid #f7f2ee;
   padding-left: 55px;
+}
+.recent-projects-slider h3 {
+  font-size: 21px;
+  margin: 0;
+}
+.recent-projects-slider .slider-cat {
+  margin: 2px 0;
+}
+.recent-projects-slider .slider-cat a {
+  color: #bcb4b2;
+  font-size: 14px;
+  text-transform: uppercase;
+  font-family: "Gilmer Bold", sans-serif;
+}
+.recent-projects-slider .single-table {
+  margin-right: 15px;
+}
+
+.arrows-inner {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  margin-top: 40px;
+}
+.arrows-inner span:hover {
+  cursor: pointer;
+}
+.arrows-inner img {
+  width: 23px;
+  margin: 0 15px;
 }
 
 .cta-connect h3 {
@@ -15149,6 +15244,203 @@ h1 {
   margin-bottom: 25px;
 }
 
+.home-services {
+  color: #000;
+}
+.home-services h2 {
+  color: #000;
+}
+.home-services ul.home-service-list {
+  list-style-type: none;
+  padding: 0;
+  z-index: 1;
+}
+.home-services ul.home-service-list li {
+  margin-bottom: 10px;
+  transition: 0.2s all;
+}
+.home-services ul.home-service-list li a {
+  font-family: "Dallas Bold", sans-serif;
+  letter-spacing: -15%;
+  color: #000;
+  font-size: 48px;
+}
+.home-services ul.home-service-list li a:hover {
+  text-decoration: none;
+}
+.home-services .default-link {
+  color: #000;
+}
+
+.home-service-hover-img {
+  position: absolute;
+  right: 0;
+  top: 0;
+  height: 100%;
+  z-index: 0;
+}
+
+.home-contact {
+  background: #6e6a67;
+  color: #f7f2ee;
+}
+.home-contact h2 {
+  color: #f7f2ee;
+}
+.home-contact a {
+  color: #f7f2ee;
+}
+.home-contact span {
+  display: block;
+  margin-bottom: 5px;
+}
+.home-contact span i {
+  width: 20px;
+  margin-right: 8px;
+  float: left;
+  text-align: center;
+  position: relative;
+  top: 5px;
+  font-size: 17px;
+}
+
+.home-contact-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+  margin-left: 75px;
+}
+
+.intro-p {
+  font-size: 22px;
+  line-height: 32px;
+  color: #f7f2ee;
+}
+
+.timeline-wrap {
+  background: #f7f2ee;
+}
+
+.team-sec {
+  background: #6e6a67;
+  color: #f7f2ee;
+}
+.team-sec h2 {
+  color: #f7f2ee;
+}
+
+.team-member {
+  margin-bottom: 45px;
+}
+.team-member img {
+  width: 100%;
+  margin-bottom: 10px;
+}
+.team-member h3 {
+  font-size: 25px;
+  margin: 3px;
+  color: #f7f2ee;
+}
+.team-member h4 {
+  font-size: 17px;
+  color: #f7f2ee;
+}
+.team-member p.deets {
+  font-size: 15px;
+  line-height: 25px;
+  letter-spacing: normal;
+  color: #bcb4b2;
+}
+.team-member p.deets span {
+  font-family: "Gilmer Bold";
+}
+
+/*
+*
+* ==========================================
+* CUSTOM UTIL CLASSES
+* ==========================================
+*
+*/
+/* Timeline holder */
+ul.timeline {
+  list-style-type: none;
+  position: relative;
+  padding-left: 1.5rem;
+}
+
+/* Timeline vertical line */
+ul.timeline:before {
+  content: " ";
+  background: #775740;
+  display: inline-block;
+  position: absolute;
+  left: 16px;
+  width: 4px;
+  height: 100%;
+  z-index: 400;
+  border-radius: 1rem;
+}
+
+li.timeline-item {
+  margin: 20px 0;
+  background: #bcb4b2;
+  color: #000;
+}
+li.timeline-item h2 {
+  color: #000;
+}
+li.timeline-item .text-gray {
+  color: #775740;
+  font-family: "Dallas Bold";
+}
+
+/* Timeline item arrow */
+.timeline-arrow {
+  border-top: 0.5rem solid transparent;
+  border-right: 0.5rem solid #bcb4b2;
+  border-bottom: 0.5rem solid transparent;
+  display: block;
+  position: absolute;
+  left: 2rem;
+}
+
+/* Timeline item circle marker */
+li.timeline-item::before {
+  content: " ";
+  background: #f7f2ee;
+  display: inline-block;
+  position: absolute;
+  border-radius: 50%;
+  border: 3px solid #000;
+  left: 11px;
+  width: 14px;
+  height: 14px;
+  z-index: 400;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
+
+span.number {
+  font-family: "Dallas Bold";
+  color: #775740;
+  font-size: 21px;
+}
+
+.process-item {
+  margin-bottom: 75px;
+}
+
+.cta-sec.light {
+  background: #f7f2ee;
+}
+.cta-sec.light a {
+  color: #000;
+}
+.cta-sec.dark {
+  background: #6e6a67;
+}
+
 footer#main-footer {
   background: #000;
   color: #f7f2ee;
@@ -15160,6 +15452,43 @@ footer#main-footer h2 {
   color: #f7f2ee;
   font-size: 16px;
   margin-bottom: 18px;
+}
+footer#main-footer p {
+  color: #f7f2ee;
+  margin-bottom: 10px;
+}
+footer#main-footer ul {
+  list-style-type: none;
+  padding: 0;
+}
+footer#main-footer a {
+  color: #f7f2ee;
+}
+footer#main-footer a:hover {
+  text-decoration: underline;
+}
+footer#main-footer a:hover i {
+  color: #743dbc;
+}
+footer#main-footer a.no-underline:hover {
+  text-decoration: none;
+}
+footer#main-footer .custom-logo-link img {
+  width: 270px;
+  margin-bottom: 0px;
+  top: -20px;
+  position: relative;
+}
+footer#main-footer .social a {
+  font-size: 20px;
+}
+
+.flex {
+  display: flex;
+  justify-content: space-between;
+}
+.flex .one {
+  max-width: 34%;
 }
 
 /*# sourceMappingURL=child-theme.css.map */
