--- a/wp-content/themes/anglewood-child/src/sass/child-theme.scss
+++ b/wp-content/themes/anglewood-child/src/sass/child-theme.scss
@@ -15,6 +15,11 @@
 @import "assets/understrap/theme/contact-form7";    // <-------- Contact Form 7 - Bootstrap 4 support
 
 @import "theme/global";
+@import "theme/mixins";
 @import "theme/nav";
 @import "theme/home";
+@import "theme/about";
+@import "theme/timeline";
+@import "theme/process";
+@import "theme/cta";
 @import "theme/footer";
