--- a/wp-content/themes/anglewood-child/src/sass/theme/_nav.scss
+++ b/wp-content/themes/anglewood-child/src/sass/theme/_nav.scss
@@ -17,4 +17,17 @@
     text-transform: uppercase;
     font-family: 'Gilmer Bold', sans-serif;
     font-size: 14px;
+    padding: 0;
+    margin: .5rem;
+    border-bottom: 3px solid $black;
+}
+
+.navbar-dark .navbar-nav .active>.nav-link {
+    color: #fff;
+    border-bottom: 3px solid $purple;
+}
+
+.navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover {
+    color: $light;
+    border-bottom: 3px solid $purple;
 }
