--- a/wp-content/themes/anglewood-child/src/sass/child-theme.scss
+++ b/wp-content/themes/anglewood-child/src/sass/child-theme.scss
@@ -21,6 +21,7 @@
 @import "theme/about";
 @import "theme/timeline";
 @import "theme/process";
+@import "theme/archives";
 @import "theme/services";
 @import "theme/faq-accordian";
 @import "theme/contact";
