--- a/wp-content/themes/anglewood-child/src/sass/theme/_cta.scss
+++ b/wp-content/themes/anglewood-child/src/sass/theme/_cta.scss
@@ -1,11 +1,12 @@
 .cta-sec {
-    &.light {
-        background: $light;
-        a {
-            color: $black;
-        }
+    background: $purple;
+    h2 {
+        color: $light;
     }
-    &.dark {
-        background: $darkGrey;
-    }
+//    &.light {
+//        background: $light;
+//        a {
+//            color: $black;
+//        }
+//    }
 }
