--- a/wp-content/themes/anglewood-child/src/sass/theme/_home.scss
+++ b/wp-content/themes/anglewood-child/src/sass/theme/_home.scss
@@ -157,7 +157,7 @@
 }
 
 .home-contact {
-    background: $darkGrey;
+    background: $purple;
     color: $light;
     h2 {
         color: $light;
