--- a/wp-content/themes/anglewood-child/src/sass/child-theme.scss
+++ b/wp-content/themes/anglewood-child/src/sass/child-theme.scss
@@ -17,6 +17,7 @@
 @import "theme/global";
 @import "theme/mixins";
 @import "theme/nav";
+@import "theme/drawer";
 @import "theme/home";
 @import "theme/about";
 @import "theme/timeline";
@@ -25,5 +26,6 @@
 @import "theme/services";
 @import "theme/faq-accordian";
 @import "theme/contact";
+@import "theme/tables";
 @import "theme/cta";
 @import "theme/footer";
