--- a/wp-content/themes/anglewood-child/src/sass/theme/_archives.scss
+++ b/wp-content/themes/anglewood-child/src/sass/theme/_archives.scss
@@ -5,3 +5,41 @@ a.portfolio-img-bg {
     background-position: center;
     background-size: cover;
 }
+
+
+
+.single-portfolio-item {
+    text-transform: uppercase;
+    font-size: 14px;
+    margin-bottom: 30px;
+    p {
+        margin-top: 4px;
+        margin-bottom: 0px;
+    }
+    .single-blog-date {
+        display: inline;
+        float: left;
+    }
+    .slider-cat {
+        display: inline;
+        float: left;
+    }
+    
+    .single-blog-info {
+        display: block;
+        float: left;
+    }
+    a h3 {
+        margin-bottom: 0;
+        letter-spacing: -.1px;
+        font-size: 24px;
+    }
+    a {
+        &:hover {
+            text-decoration: none;
+            h3 {
+                color: $purple;
+            }
+        }
+    }
+}
