--- a/wp-content/themes/anglewood-child/src/sass/theme/_drawer.scss
+++ b/wp-content/themes/anglewood-child/src/sass/theme/_drawer.scss
@@ -9,7 +9,7 @@
     background: $black;
     width: 100vw;
     height: 100vh;
-    z-index: 9999;
+    z-index: 999999;
     .container-fluid {
         padding: 20px;
     }
@@ -40,6 +40,7 @@
     position: absolute;
     bottom: 10px;
     right: 10px;
+    width: 720px;
 }
 
 
