--- a/wp-content/themes/anglewood-child/src/sass/child-theme.scss
+++ b/wp-content/themes/anglewood-child/src/sass/child-theme.scss
@@ -27,5 +27,6 @@
 @import "theme/faq-accordian";
 @import "theme/contact";
 @import "theme/tables";
+@import "theme/slabs";
 @import "theme/cta";
 @import "theme/footer";
