--- a/wp-content/themes/anglewood-child/css/child-theme.css
+++ b/wp-content/themes/anglewood-child/css/child-theme.css
@@ -15128,7 +15128,8 @@ h1 {
 }
 
 img.nav-logo {
-  width: 300px;
+  width: 230px;
+  padding: 10px;
 }
 
 .hamburgerMenu {
@@ -15274,6 +15275,9 @@ img.nav-logo {
 .home-contact {
   background: #743dbc;
   color: #f7f2ee;
+}
+.home-contact.black {
+  background: #000;
 }
 .home-contact h2 {
   color: #f7f2ee;
@@ -15645,6 +15649,18 @@ a.portfolio-img-bg {
   margin-bottom: 0;
   font-family: "Dallas Bold", sans-serif;
   border-bottom: none;
+}
+
+.visit-slab-store {
+  width: 100%;
+  font-size: 32px;
+  padding: 30px 0;
+  font-family: "Dallas Bold", sans-serif;
+  margin-bottom: 24px;
+}
+
+.carousel-cell {
+  height: 470px;
 }
 
 .cta-sec {
