--- a/wp-content/themes/anglewood-child/src/sass/theme/_home.scss
+++ b/wp-content/themes/anglewood-child/src/sass/theme/_home.scss
@@ -161,6 +161,9 @@
 .home-contact {
     background: $purple;
     color: $light;
+    &.black {
+        background: $black;
+    }
     h2 {
         color: $light;
     }
