--- a/wp-content/themes/anglewood-child/css/child-theme.css
+++ b/wp-content/themes/anglewood-child/css/child-theme.css
@@ -15455,19 +15455,24 @@ a.portfolio-img-bg {
 .single-portfolio-item .single-blog-date {
   display: inline;
   float: left;
+  margin-bottom: 0;
 }
 .single-portfolio-item .slider-cat {
   display: inline;
   float: left;
+  margin-bottom: 0;
+}
+.single-portfolio-item span.sep {
+  display: inline;
+  margin: 0 6px 0 10px;
 }
 .single-portfolio-item .single-blog-info {
   display: block;
   float: left;
 }
 .single-portfolio-item a h3 {
-  margin-bottom: 0;
-  letter-spacing: -0.1px;
-  font-size: 24px;
+  margin-bottom: 40px;
+  font-size: 20px;
 }
 .single-portfolio-item a:hover {
   text-decoration: none;
@@ -15638,7 +15643,8 @@ a.portfolio-img-bg {
 }
 
 .single-blog-info h3 {
-  margin-bottom: 8px;
+  margin-bottom: 40px;
+  font-size: 20px;
 }
 .single-blog-info p {
   margin-bottom: 4px;
@@ -15649,6 +15655,26 @@ a.portfolio-img-bg {
   margin-bottom: 0;
   font-family: "Dallas Bold", sans-serif;
   border-bottom: none;
+}
+
+.alm-btn-wrap .alm-load-more-btn {
+  font-size: 15px !important;
+  font-family: "Gilmer Light", sans-serif !important;
+  text-transform: uppercase !important;
+  background: #743dbc !important;
+  padding: 12px 20px !important;
+  color: #fff !important;
+  transition: 0.2s all !important;
+  margin: 24px auto 0 !important;
+  display: block !important;
+  width: 205px !important;
+  text-align: center !important;
+  border-radius: 0 !important;
+}
+.alm-btn-wrap .alm-load-more-btn:hover {
+  text-decoration: none !important;
+  background: #502a82 !important;
+  color: #fff !important;
 }
 
 .visit-slab-store {
