--- a/wp-content/themes/anglewood-child/src/sass/theme/_archives.scss
+++ b/wp-content/themes/anglewood-child/src/sass/theme/_archives.scss
@@ -19,20 +19,24 @@ a.portfolio-img-bg {
     .single-blog-date {
         display: inline;
         float: left;
+        margin-bottom: 0;
     }
     .slider-cat {
         display: inline;
         float: left;
+        margin-bottom: 0;
     }
-    
+    span.sep {
+        display: inline;
+        margin: 0 6px 0 10px;
+    }
     .single-blog-info {
         display: block;
         float: left;
     }
     a h3 {
-        margin-bottom: 0;
-        letter-spacing: -.1px;
-        font-size: 24px;
+        margin-bottom: 40px;
+        font-size: 20px;
     }
     a {
         &:hover {
