--- a/wp-content/themes/anglewood-child/src/sass/theme/_tables.scss
+++ b/wp-content/themes/anglewood-child/src/sass/theme/_tables.scss
@@ -42,7 +42,8 @@
 }
 .single-blog-info {
     h3 {
-        margin-bottom: 8px;
+        margin-bottom: 40px;
+        font-size: 20px;
     }
     p {
         margin-bottom: 4px;
@@ -53,5 +54,26 @@
             font-family: 'Dallas Bold', sans-serif;
             border-bottom: none;
         }
+    }
+}
+
+
+.alm-btn-wrap .alm-load-more-btn {
+    font-size: 15px !important;
+    font-family: 'Gilmer Light', sans-serif !important;
+    text-transform: uppercase !important;
+    background: $purple !important;
+    padding: 12px 20px !important;
+    color: #fff !important;
+    transition: 0.2s all !important;
+    margin: 24px auto 0 !important;
+    display: block !important;
+    width: 205px !important;
+    text-align: center !important;
+    border-radius: 0 !important;
+    &:hover {
+        text-decoration: none !important;
+        background: darken($purple, 15%) !important;
+        color: #fff !important;
     }
 }
