--- a/wp-content/themes/anglewood-child/css/child-theme.css
+++ b/wp-content/themes/anglewood-child/css/child-theme.css
@@ -15648,6 +15648,27 @@ a.portfolio-img-bg {
   margin-bottom: 12px;
 }
 
+.single-blog-img.sold {
+  position: relative;
+}
+.single-blog-img.sold img {
+  opacity: 0.5;
+}
+.single-blog-img .sold-tag {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  background: #743dbc;
+  color: #fff;
+  text-transform: uppercase;
+  font-family: "Dallas Bold", sans-serif;
+  font-size: 14px;
+  text-align: center;
+  width: 75px;
+  height: 40px;
+  line-height: 40px;
+}
+
 .single-blog-info h3 {
   margin-bottom: 40px;
   font-size: 20px;
