--- a/wp-content/themes/anglewood-child/src/sass/theme/_tables.scss
+++ b/wp-content/themes/anglewood-child/src/sass/theme/_tables.scss
@@ -40,6 +40,28 @@
         margin-bottom: 12px;
     }
 }
+.single-blog-img {
+    &.sold {
+        position: relative;
+        img {
+            opacity: .5;
+        }
+    }
+    .sold-tag {
+        position: absolute;
+        top: -10px;
+        right: -10px;
+        background: $purple;
+        color: $white;
+        text-transform: uppercase;
+        font-family: 'Dallas Bold', sans-serif;
+        font-size: 14px;
+        text-align: center;
+        width: 75px;
+        height: 40px;
+        line-height: 40px;
+    }
+}
 .single-blog-info {
     h3 {
         margin-bottom: 40px;
