--- a/wp-content/themes/anglewood-child/src/sass/theme/_archives.scss
+++ b/wp-content/themes/anglewood-child/src/sass/theme/_archives.scss
@@ -7,6 +7,12 @@ a.portfolio-img-bg {
 }
 
 
+.single-date {
+    font-family: "Gilmer Bold", sans-serif;
+    color: $lightGrey;
+    font-size: 18px;
+    margin-top: 18px;
+}
 
 .single-portfolio-item {
     text-transform: uppercase;
